--- a/css/root.css
+++ b/css/root.css
@@ -1,6 +1,7 @@
 :root {
   --width-minimum: 360px;
   --height-minimun: 640px;
+  font-family: "Nanum Gothic", sans-serif;
 }
 body {
   width: 100vw;
