--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -6,7 +6,7 @@ main {
 }
 main > .wrapper {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   flex-basis: 360px;
   flex-grow: 1;
